Parameterize the things

--- a/files/servatrice.ini
+++ b/files/servatrice.ini
@@ -101,12 +101,12 @@ roomlist\1\autojoin=true
 roomlist\1\joinmessage="Friday Magic Lunch is played here. Don't tell Kenny."
 
 ; Number of game types allowed (defined) in the room number 1
-roomlist\1\game_types\size=3
+roomlist\1\game_types\size=1
 
 ; Name of the three game types for the room number 1
-roomlist\1\game_types\1\name="GameType1"
-roomlist\1\game_types\2\name="GameType2"
-roomlist\1\game_types\3\name="GameType3"
+roomlist\1\game_types\1\name="Standard Magic"
+;roomlist\1\game_types\2\name="GameType2"
+;roomlist\1\game_types\3\name="GameType3"
 
 
 [game]
